...
  settings: TestIDs.TabBar.SettingsTab,
};

const TABS: TabItem[] = [
  {
    name: 'index',
    title: 'Today',
    icon: 'today-outline',
    iconActive: 'today',
    routeName: 'index',
  },
  {
    name: 'food',
...
    icon: 'bar-chart-outline',
    iconActive: 'bar-chart',
    routeName: 'progress',
  },
  {
    name: 'settings',
    title: 'Settings',
    icon: 'settings-outline',
    iconActive: 'settings',
    routeName: 'settings',
  },
];

...
